completed SalesReport